--- a/front/src/pages/login/index.scss
+++ b/front/src/pages/login/index.scss
@@ -10,6 +10,7 @@ background-color: rgb(26, 25, 25);
     .cartao{
         display: flex;
         flex-direction: column;
+        align-items: center;
         background-color: #fff;
         padding: 30px 20px ;
         gap: 10px;
@@ -45,6 +46,31 @@ background-color: rgb(26, 25, 25);
                     border: 1px solid gray;
                 }
             }
+        }
+
+        button{
+            font: 500 20px poppins;
+            border: 2px solid transparent;
+            background-color: greenyellow;
+            border-radius: 7px;
+            width: 100px;
+            padding: 5px 10px ;
+            cursor: pointer;
+            transition: .3s;
+        }
+        button:hover{
+            transform: scale(1.1);
+            color: greenyellow;
+            background-color: #fff;
+            border: 2px solid greenyellow;
+            cursor: pointer;
+        }
+        button:active{
+            transform: scale(1.0);
+            color: #fff;
+            background-color: greenyellow;
+            border: 2px solid transparent;
+            cursor: pointer;
         }
     }
 }
